--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "start": "npm run dev",
-    "dev": "cross-env NODE_ENV=development webpack --hot",
+    "dev": "cross-env NODE_ENV=development webpack",
     "build": "webpack"
   },
   "author": "narol",
@@ -16,7 +16,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-typescript": "^7.1.0",
-    "@babel/runtime": "^7.1.5",
+    "@babel/runtime": "^7.2.0",
     "@types/wegame-api": "^2.3.0",
     "babel-loader": "^8.0.4",
     "cross-env": "^5.2.0",
